<resources>
    <string name="app_name">MindSync</string>
    <string name="side_bar_board_list">보드 목록</string>
    <string name="side_bar_conversation_history">대화 기록</string>
    <string name="side_bar_recycle_bin">휴지통</string>
    <string name="side_bar_invite_space">스페이스 초대하기</string>
    <string name="side_bar_leave_space">스페이스 나가기</string>
    <string name="side_bar_fold_description">사이드바 접기</string>
    <string name="main_back_pressed_message">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="add_space_dialog_title">스페이스 추가하기</string>
    <string name="add_space_dialog_join">기존 스페이스 참여하기</string>
    <string name="add_space_dialog_generate">새 스페이스 만들기</string>
    <string name="generate_space_title">생성할 스페이스의 \n정보를 입력해주세요!</string>
    <string name="generate_space_menu_message">새 스페이스 만들기</string>
    <string name="choose_image_dialog_title">스페이스 사진 선택</string>
    <string name="choose_image_dialog_gallery">갤러리</string>
    <string name="choose_image_dialog_drawing">드로잉</string>
    <string name="add_space_check_message">확인</string>
    <string name="invite_space_menu_message">스페이스 초대 코드 입력하기</string>
    <string name="invite_space_title">가입하려는 스페이스의\n초대코드를 입력해주세요!</string>
    <string name="invite_space_info">초대코드는 해당 스페이스에\n참여한 멤버에게만 받을 수 있습니다.</string>
    <string name="board_list_board_name">보드 이름</string>
    <string name="board_list_board_create_date">yyyy-mm-dd</string>
</resources>