<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/drawer_side_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <View
            android:id="@+id/view_side_bar_space"
            android:layout_width="70dp"
            android:layout_height="0dp"
            android:background="@color/sub3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view_side_bar_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_side_bar_menu"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:background="@color/main3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/view_side_bar_space"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imgbtn_side_bar_fold"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/side_bar_fold_description"
            android:onClick="foldDrawerButtonOnClick"
            android:src="@drawable/ic_fold"
            app:layout_constraintEnd_toEndOf="@id/view_side_bar_menu"
            app:layout_constraintTop_toTopOf="@id/view_side_bar_menu" />

        <TextView
            android:id="@+id/tv_side_bar_space_name"
            style="@style/Typography.Title03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@id/imgbtn_side_bar_fold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/view_side_bar_menu"
            app:layout_constraintTop_toTopOf="@id/view_side_bar_menu"
            tools:text="스페이스 이름" />

        <TextView
            android:id="@+id/tv_side_bar_board_list"
            style="@style/Typography.Body01.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingTop="20dp"
            android:text="@string/side_bar_board_list"
            app:layout_constraintEnd_toEndOf="@id/view_side_bar_menu"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/view_side_bar_menu"
            app:layout_constraintTop_toBottomOf="@id/tv_side_bar_space_name" />

        <TextView
            android:id="@+id/tv_side_bar_conversation_history"
            style="@style/Typography.Body01.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/side_bar_conversation_history"
            app:layout_constraintEnd_toEndOf="@id/view_side_bar_menu"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/view_side_bar_menu"
            app:layout_constraintTop_toBottomOf="@id/tv_side_bar_board_list" />

        <TextView
            android:id="@+id/tv_side_bar_recycle_bin"
            style="@style/Typography.Body01.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/side_bar_recycle_bin"
            app:layout_constraintBottom_toTopOf="@id/tv_side_bar_invite_space"
            app:layout_constraintEnd_toEndOf="@id/view_side_bar_menu"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/view_side_bar_menu" />

        <TextView
            android:id="@+id/tv_side_bar_invite_space"
            style="@style/Typography.Body01.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/side_bar_invite_space"
            app:layout_constraintBottom_toTopOf="@id/tv_side_bar_leave_space"
            app:layout_constraintEnd_toEndOf="@id/view_side_bar_menu"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/view_side_bar_menu" />

        <TextView
            android:id="@+id/tv_side_bar_leave_space"
            style="@style/Typography.Body01.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/side_bar_leave_space"
            app:layout_constraintBottom_toBottomOf="@id/view_side_bar_menu"
            app:layout_constraintEnd_toEndOf="@id/view_side_bar_menu"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/view_side_bar_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>