<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_round_dialog">

    <TextView
        android:id="@+id/tv_choose_space_image_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/choose_image_dialog_title"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choose_space_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main4"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/choose_image_dialog_gallery"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_choose_space_drawing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_space_image_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choose_space_drawing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main3"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/choose_image_dialog_drawing"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_choose_space_gallery"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_space_image_title" />
</androidx.constraintlayout.widget.ConstraintLayout>