<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="200dp"
    android:background="@drawable/bg_round_dialog"
    android:backgroundTint="@color/main3">

    <TextView
        android:id="@+id/tv_add_space_title"
        style="@style/Typography.Title03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_space_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_space_join"
        style="@style/Typography.Body02.Medium"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/add_space_dialog_join"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btn_add_space_generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_space_title"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_space_generate"
        style="@style/Typography.Body02.Medium"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/add_space_dialog_generate"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_space_join"
        app:layout_constraintVertical_weight="1" />
</androidx.constraintlayout.widget.ConstraintLayout>