<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main3"
        android:padding="10dp"
        tools:context=".ui.space.AddSpaceFragment">

        <ImageButton
            android:id="@+id/imgbtn_add_invite_space_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_add_space_menu_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:fontFamily="@font/pretendard_semi_bold"
            android:text="@string/invite_space_menu_message"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/imgbtn_add_invite_space_back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_add_invite_space_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/pretendard_semi_bold"
            android:lineSpacingExtra="5dp"
            android:text="@string/invite_space_title"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_space_menu_message" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfl_add_invite_space_invite_code"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_invite_space_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfl_add_invite_space_edit_invite_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/pretendard_medium"
                android:hint="초대 코드" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_invite_space_ok"
            android:layout_width="264dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/main4"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/add_space_check_message"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tfl_add_invite_space_invite_code" />

        <TextView
            android:id="@+id/tv_add_invite_space_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/pretendard_medium"
            android:lineSpacingExtra="5dp"
            android:text="@string/invite_space_info"
            app:layout_constraintStart_toStartOf="@id/btn_add_invite_space_ok"
            app:layout_constraintTop_toBottomOf="@id/btn_add_invite_space_ok" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>